--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "start": "cross-env NODE_PATH=. node server.js",
+    "start": "cross-env NODE_ENV=production NODE_PATH=. node server.js",
     "build": "webpack --config ./webpack/webpack.prod.js",
     "dev": "cross-env NODE_ENV=development NODE_PATH=. node server.js",
     "debug": "NODE_ENV=development cross-env NODE_PATH=. node --inspect server.js",
@@ -184,5 +184,5 @@
     "async": "^3.2.2",
     "minimatch": "^3.0.5"
   },
-  "packageManager": "yarn@3.5.0"
+  "packageManager": "yarn@3.5.1"
 }
