--- a/charts/sscs-tribunals-frontend/values.yaml
+++ b/charts/sscs-tribunals-frontend/values.yaml
@@ -1,5 +1,5 @@
 nodejs:
-  image: 'hmctspublic.azurecr.io/sscs/tribunals-frontend:latest'
+  image: 'hmctspublic.azurecr.io/sscs/tribunals-frontend:pr-1383'
   applicationPort: 3000
   aadIdentityName: sscs
   livenessPath: /health/readiness
