--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=production NODE_PATH=. node server.js",
+    "start": "cross-env NODE_PATH=. node server.js",
     "build": "webpack --config ./webpack/webpack.prod.js",
     "dev": "cross-env NODE_ENV=development NODE_PATH=. node server.js",
     "debug": "NODE_ENV=development cross-env NODE_PATH=. node --inspect server.js",
