--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "helmet": "^3.18.0",
     "html-entities": "^1.2.1",
     "http-status-codes": "^1.3.2",
+    "ioredis": "^5.2.4",
     "jquery": "^3.6.0",
     "jquery-modal": "^0.9.1",
     "js-base64": "^2.5.1",
@@ -96,7 +97,6 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.3",
     "postcss-loader": "^3.0.0",
-    "redis": "^4.6.7",
     "request": "^2.87.0",
     "request-promise": "^4.2.4",
     "sass-loader": "^7.1.0",
