--- a/.dockerignore
+++ b/.dockerignore
@@ -28,13 +28,10 @@
 !server.js
 !steps.js
 !urls.js
+!gulpfile.js
 
-# Yarn 3 files
+!.yarn/**
 !.yarnrc.yml
-!.yarn/versions
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-
+.yarn/cache
+.yarn/install-state.gz
 
