--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cross-env": "^5.1.3",
     "css-loader": "^3.0.0",
     "csurf": "^1.10.0",
+    "dicer": "^0.3.1",
     "express": "^4.17.1",
     "express-nunjucks": "^2.2.3",
     "express-static-gzip": "^1.1.3",
@@ -90,7 +91,7 @@
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.29.4",
-    "node-sass": "^4.14.1",
+    "node-sass": "^9.0.0",
     "nunjucks": "^3.2.4",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
