--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
+    "caniuse-lite": "^1.0.30001518",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^5.0.0",
