--- a/package.json
+++ b/package.json
@@ -38,81 +38,81 @@
     "lint"
   ],
   "dependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
     "@hmcts/cookie-manager": "^1.0.0",
     "@hmcts/div-idam-express-middleware": "^6.6.2",
-    "@hmcts/nodejs-healthcheck": "^1.7.0",
-    "@hmcts/one-per-page": "5.4.0",
-    "@hmcts/properties-volume": "0.0.13",
-    "@hmcts/uk-bank-holidays": "^1.0.1",
-    "accessible-autocomplete": "^2.0.2",
-    "applicationinsights": "^1.7.0",
+    "@hmcts/nodejs-healthcheck": "^1.8.0",
+    "@hmcts/one-per-page": "^5.4.0",
+    "@hmcts/properties-volume": "^1.0.0",
+    "@hmcts/uk-bank-holidays": "^1.0.2",
+    "accessible-autocomplete": "^2.0.4",
+    "applicationinsights": "^2.7.0",
     "applicationinsights-native-metrics": "^0.0.7",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "body-parser": "^1.19.0",
+    "babel-loader": "^9.1.3",
+    "body-parser": "^1.20.2",
     "caniuse-lite": "^1.0.30001518",
-    "chalk": "^2.4.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^5.0.0",
-    "config": "^3.2.5",
-    "cookies": "^0.7.3",
-    "copy-webpack-plugin": "^6.0.0",
-    "cross-env": "^5.1.3",
-    "css-loader": "^3.0.0",
-    "csurf": "^1.10.0",
+    "chalk": "^5.3.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "config": "^3.3.9",
+    "cookies": "^0.8.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
+    "csurf": "^1.11.0",
     "dicer": "^0.3.1",
-    "express": "^4.17.1",
-    "express-nunjucks": "^2.2.3",
-    "express-static-gzip": "^1.1.3",
+    "express": "^4.18.2",
+    "express-nunjucks": "^3.1.1",
+    "express-static-gzip": "^2.1.7",
     "extends-classes": "^1.0.5",
-    "file-loader": "^4.0.0",
-    "form-data": "^2.3.2",
-    "formidable": "^1.2.1",
+    "file-loader": "^6.2.0",
+    "form-data": "^4.0.0",
+    "formidable": "^3.5.0",
     "fs": "^0.0.1-security",
-    "git-rev-sync": "^1.12.0",
+    "git-rev-sync": "^3.0.2",
     "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^3.11.0",
-    "govuk_template_jinja": "0.26.0",
-    "graceful-fs": "^4.1.15",
+    "govuk-frontend": "^4.7.0",
+    "govuk_template_jinja": "^0.26.0",
+    "graceful-fs": "^4.2.11",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "helmet": "^3.18.0",
-    "html-entities": "^1.2.1",
-    "http-status-codes": "^1.3.2",
-    "jquery": "^3.6.0",
-    "jquery-modal": "^0.9.1",
-    "js-base64": "^2.5.1",
-    "js-yaml": "^3.6.1",
-    "jsdom": "^16.5.0",
-    "libphonenumber-js": "^1.7.19",
+    "helmet": "^7.0.0",
+    "html-entities": "^2.4.0",
+    "http-status-codes": "^2.2.0",
+    "jquery": "^3.7.0",
+    "jquery-modal": "^0.9.2",
+    "js-base64": "^3.7.5",
+    "js-yaml": "^4.1.0",
+    "jsdom": "^22.1.0",
+    "libphonenumber-js": "^1.10.38",
     "loader-utils": "^3.2.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "mini-css-extract-plugin": "^0.7.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "moment": "^2.29.4",
     "node-sass": "^9.0.0",
     "nunjucks": "^3.2.4",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "parse-full-name": "^1.2.3",
-    "postcss-loader": "^3.0.0",
+    "parse-full-name": "^1.2.6",
+    "postcss-loader": "^7.3.3",
     "redis": "^4.6.7",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.4",
-    "sass-loader": "^7.1.0",
-    "serve-static": "^1.14.1",
-    "superagent": "^6.1.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "sass-loader": "^13.3.2",
+    "serve-static": "^1.15.0",
+    "superagent": "^8.0.9",
     "superagent-csrf": "^1.0.0",
-    "terser-webpack-plugin": "^1.3.0",
-    "trim-newlines": "^4.0.0",
-    "uuid": "^8.2.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "trim-newlines": "^5.0.0",
+    "uuid": "^9.0.0",
     "webpack": "^5.88.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^3.7.3",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^6.1.1",
+    "webpack-merge": "^5.9.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@hmcts/eslint-config": "^1.4.0",
