--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.17.0"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=. node server.js",
@@ -48,12 +48,12 @@
     "@hmcts/uk-bank-holidays": "^1.0.2",
     "accessible-autocomplete": "^2.0.4",
     "applicationinsights": "^2.7.0",
-    "applicationinsights-native-metrics": "^0.0.7",
+    "applicationinsights-native-metrics": "^0.0.9",
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
     "caniuse-lite": "^1.0.30001518",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^10.0.0",
     "config": "^3.3.9",
@@ -116,6 +116,7 @@
   },
   "devDependencies": {
     "@hmcts/eslint-config": "^1.4.0",
+    "ajv": "^7.2.4",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-jq": "^0.0.9",
@@ -184,7 +185,8 @@
     "validator": "^13.7.0",
     "ajv": "^6.12.3",
     "async": "^3.2.2",
-    "minimatch": "^3.0.5"
+    "minimatch": "^3.0.5",
+    "nightmare": "^2.3.0"
   },
   "packageManager": "yarn@3.5.1"
 }
