--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=. node server.js",
@@ -38,151 +38,93 @@
     "lint"
   ],
   "dependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
     "@hmcts/cookie-manager": "^1.0.0",
     "@hmcts/div-idam-express-middleware": "^6.6.2",
-    "@hmcts/nodejs-healthcheck": "^1.7.0",
-    "@hmcts/one-per-page": "5.4.0",
-    "@hmcts/properties-volume": "0.0.13",
-    "@hmcts/uk-bank-holidays": "^1.0.1",
-    "accessible-autocomplete": "^2.0.2",
-    "applicationinsights": "^1.7.0",
-    "applicationinsights-native-metrics": "^0.0.7",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "body-parser": "^1.19.0",
-    "chalk": "^2.4.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^5.0.0",
-    "config": "^3.2.5",
-    "cookies": "^0.7.3",
-    "copy-webpack-plugin": "^6.0.0",
-    "cross-env": "^5.1.3",
-    "css-loader": "^3.0.0",
-    "csurf": "^1.10.0",
-    "express": "^4.17.1",
-    "express-nunjucks": "^2.2.3",
-    "express-static-gzip": "^1.1.3",
-    "extends-classes": "^1.0.5",
-    "file-loader": "^4.0.0",
-    "form-data": "^2.3.2",
-    "formidable": "^1.2.1",
-    "fs": "^0.0.1-security",
-    "git-rev-sync": "^1.12.0",
-    "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^3.11.0",
-    "govuk_template_jinja": "0.26.0",
-    "graceful-fs": "^4.1.15",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.3.0",
-    "helmet": "^3.18.0",
-    "html-entities": "^1.2.1",
-    "http-status-codes": "^1.3.2",
-    "jquery": "^3.6.0",
-    "jquery-modal": "^0.9.1",
-    "js-base64": "^2.5.1",
-    "js-yaml": "^3.6.1",
-    "jsdom": "^16.5.0",
-    "libphonenumber-js": "^1.7.19",
-    "loader-utils": "^3.2.1",
+    "@hmcts/nodejs-healthcheck": "^1.8.0",
+    "@hmcts/one-per-page": "^5.4.0",
+    "@hmcts/properties-volume": "^1.0.0",
+    "@hmcts/uk-bank-holidays": "^1.0.2",
+    "accessible-autocomplete": "^2.0.4",
+    "applicationinsights": "^2.7.3",
+    "applicationinsights-native-metrics": "^0.0.10",
+    "body-parser": "^1.20.2",
+    "chalk": "^4.1.2",
+    "config": "^3.3.9",
+    "cookie-parser": "^1.4.6",
+    "cookies": "^0.8.0",
+    "csurf": "^1.11.0",
+    "express": "^4.18.2",
+    "express-nunjucks": "^3.1.1",
+    "formidable": "^3.5.1",
+    "govuk-frontend": "^4.7.0",
+    "govuk_template_jinja": "^0.26.0",
+    "graceful-fs": "^4.2.11",
+    "helmet": "^7.0.0",
+    "html-entities": "^2.4.0",
+    "http-status-codes": "^2.2.0",
+    "jquery": "^3.7.1",
+    "jquery-modal": "^0.9.2",
+    "js-base64": "^3.7.5",
+    "libphonenumber-js": "^1.10.43",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.29.4",
-    "node-sass": "^4.14.1",
     "nunjucks": "^3.2.4",
-    "nunjucks-loader": "^3.0.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "parse-full-name": "^1.2.3",
-    "postcss-loader": "^3.0.0",
-    "redis": "^4.6.7",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.4",
-    "sass-loader": "^7.1.0",
-    "serve-static": "^1.14.1",
-    "superagent": "^6.1.0",
+    "parse-full-name": "^1.2.6",
+    "redis": "^4.6.8",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "superagent": "^8.1.2",
     "superagent-csrf": "^1.0.0",
-    "terser-webpack-plugin": "^1.3.0",
-    "trim-newlines": "^4.0.0",
-    "uuid": "^8.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^3.7.3",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.11",
+    "@babel/preset-env": "^7.22.10",
     "@hmcts/eslint-config": "^1.4.0",
-    "chai": "^4.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.3.0",
+    "chai": "^4.3.8",
     "chai-as-promised": "^7.1.1",
     "chai-jq": "^0.0.9",
-    "chokidar": "^3.0.1",
-    "codeceptjs": "^2.6.11",
-    "cookie-parser": "^1.4.5",
-    "eslint": "^7.2.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "codeceptjs": "^3.5.3",
+    "copy-webpack-plugin": "^6.4.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.7",
+    "eslint": "^8.48.0",
     "eslint-plugin-mocha": "^5.0.0",
-    "mocha": "^6.1.4",
-    "mocha-multi": "^1.1.0",
-    "mocha-param": "^2.0.0",
-    "mochapack": "^2.1.2",
-    "mochawesome": "^4.0.1",
-    "nightmare": "^3.0.2",
-    "nightmare-upload": "^0.1.1",
-    "nock": "^10.0.6",
-    "node-dev": "^4.0.0",
+    "file-loader": "^6.2.0",
+    "fs": "^0.0.1-security",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
+    "jsdom": "^16.5.0",
+    "mini-css-extract-plugin": "^1.6.2",
+    "mocha": "^10.2.0",
+    "mocha-multi": "^1.1.7",
+    "mocha-param": "^2.0.1",
+    "mochapack": "^2.1.4",
+    "mochawesome": "^7.1.3",
+    "nock": "^13.3.3",
+    "nunjucks-loader": "^3.0.0",
     "nyc": "^15.1.0",
-    "pa11y": "^5.1.0",
-    "portscanner": "^2.1.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "pa11y": "^6.2.3",
     "pre-commit": "^1.2.2",
-    "proxyquire": "^2.0.1",
-    "puppeteer": "^5.4.1",
-    "rewire": "^4.0.1",
-    "sinon": "^7.3.2",
-    "sinon-chai": "^3.0.0",
-    "sonar-scanner": "^3.0.3",
-    "supertest": "^4.0.2",
-    "webdriverio": "^6.7.3"
-  },
-  "resolutions": {
-    "moment": "^2.29.4",
-    "assign-deep": "1.0.1",
-    "braces": "^2.3.2",
-    "eslint-utils": "^1.4.1",
-    "js-yaml": "3.13.1",
-    "lodash": "^4.17.21",
-    "minimist": "^1.2.6",
-    "electron": "^18.3.7",
-    "axios": "^0.21.4",
-    "elliptic": "^6.5.4",
-    "hosted-git-info": "^3.0.8",
-    "url-parse": "^1.5.8",
-    "browserslist": "4.17.5",
-    "glob-parent": "^5.1.2",
-    "tar": "^6.1.9",
-    "trim-newlines": "^4.0.2",
-    "set-value": "^4.1.0",
-    "ansi-regex": "^5.0.1",
-    "json-schema": "^0.4.0",
-    "shelljs": "^0.8.5",
-    "nanoid": "^3.1.31",
-    "terser": "^4.8.1",
-    "scss-tokenizer": "^0.4.3",
-    "cookiejar": "^2.1.4",
-    "qs": "^6.5.3",
-    "json5": "^1.0.2",
-    "decode-uri-component": "^0.2.1",
-    "node-notifier": "^8.0.1",
-    "got": "^11.8.5",
-    "http-cache-semantics": "^4.1.1",
-    "redis": "^3.1.1",
-    "flat": "^5.0.1",
-    "follow-redirects": "^1.14.8",
-    "ua-parser-js": "^0.7.33",
-    "validator": "^13.7.0",
-    "ajv": "^6.12.3",
-    "async": "^3.2.2",
-    "minimatch": "^3.0.5"
+    "proxyquire": "^2.1.3",
+    "puppeteer": "^21.1.1",
+    "rewire": "^7.0.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^10.4.1",
+    "sinon": "^15.2.0",
+    "sinon-chai": "^3.7.0",
+    "supertest": "^6.3.3",
+    "terser-webpack-plugin": "^4.2.3",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-middleware": "^5.3.3",
+    "webpack-merge": "^5.9.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "packageManager": "yarn@3.5.1"
 }
