--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "start": "cross-env NODE_PATH=. node server.js",
-    "build": "webpack --config ./webpack/webpack.prod.js",
-    "dev": "cross-env NODE_ENV=development NODE_PATH=. node server.js",
-    "debug": "NODE_ENV=development cross-env NODE_PATH=. node --inspect server.js",
+    "start": "cross-env NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node server.js",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider webpack --config ./webpack/webpack.prod.js",
+    "dev": "cross-env NODE_ENV=development NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node server.js",
+    "debug": "NODE_ENV=development cross-env NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node --inspect server.js",
     "setup": "exit 0",
     "mock": "yarn mock-uploader & yarn debug",
     "test:unit": "cross-env NODE_PATH=. NODE_ENV=test mocha --exit 'test/unit/**/*.test.js'",
@@ -125,6 +125,9 @@
     "webpack-dev-middleware": "^5.3.3",
     "webpack-merge": "^5.9.0",
     "webpack-node-externals": "^3.0.0"
+  },
+  "resolutions": {
+    "@hmcts/nodejs-logging": "^4.0.4"
   },
   "packageManager": "yarn@3.5.1"
 }
