--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - "9229:9229"
       - "3000:3000"
     image: hmctspublic.azurecr.io/sscs/tribunals-frontend:latest
+    volumes:
+      - ./secrets/:/mnt/secrets/
     environment:
       REDIS_URL: 'redis://redis:6379'
     links:
