--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "test:a11y": "cross-env NODE_PATH=. NODE_ENV=a11y LOG_LEVEL=ERROR mocha --exit test/accessibility/a11y.js --exit --timeout 60000 --reporter mochawesome --reporter-options reportDir=functional-output,reportFilename=a11y,inlineAssets=true,reportTitle=submit-your-appeal",
     "fortifyScan": "./test/java/gradlew -p test/java fortifyScan",
     "mock-uploader": "node test/file_acceptor/evidence_uploader.js",
-    "mock-ccd": "node mocks/ccd/server.js"
+    "mock-ccd": "node mocks/ccd/server.js",
+    "mount-secrets": "node ./bin/mountsecrets.js"
   },
   "pre-commit": [
     "lint"
   ],
   "dependencies": {
+    "@azure/identity": "^3.3.0",
+    "@azure/keyvault-secrets": "^4.7.0",
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@hmcts/cookie-manager": "^1.0.0",
