--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "lint"
   ],
   "dependencies": {
+    "@cypress/request": "^3.0.0",
+    "@cypress/request-promise": "^5.0.0",
     "@hmcts/cookie-manager": "^1.0.0",
     "@hmcts/div-idam-express-middleware": "^6.6.2",
     "@hmcts/nodejs-healthcheck": "^1.8.0",
@@ -72,8 +74,6 @@
     "nunjucks": "^3.2.4",
     "parse-full-name": "^1.2.6",
     "redis": "^4.6.8",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
     "superagent": "^8.1.2",
     "superagent-csrf": "^1.0.0",
     "uuid": "^9.0.0"
@@ -127,7 +127,11 @@
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
-    "@hmcts/nodejs-logging": "^4.0.4"
+    "@hmcts/nodejs-logging": "^4.0.4",
+    "json-schema": "^0.4.0",
+    "qs": "^6.11.2",
+    "semver": "^7.5.4",
+    "tough-cookie": "^4.1.3"
   },
   "packageManager": "yarn@3.5.1"
 }
