--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "test:a11y": "cross-env NODE_PATH=. NODE_ENV=a11y LOG_LEVEL=ERROR mocha --exit test/accessibility/a11y.js --exit --timeout 60000 --reporter mochawesome --reporter-options reportDir=functional-output,reportFilename=a11y,inlineAssets=true,reportTitle=submit-your-appeal",
     "fortifyScan": "./test/java/gradlew -p test/java fortifyScan",
     "mock-uploader": "node test/file_acceptor/evidence_uploader.js",
-    "mock-ccd": "node mocks/ccd/server.js",
-    "mount-secrets": "node ./bin/mountsecrets.js"
+    "mock-ccd": "node mocks/ccd/server.js"
   },
   "pre-commit": [
     "lint"
