--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@hmcts/uk-bank-holidays": "^1.0.2",
     "accessible-autocomplete": "^2.0.4",
     "applicationinsights": "^2.7.3",
+    "applicationinsights-native-metrics": "^0.0.10",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
     "config": "^3.3.9",
