--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "lint"
   ],
   "dependencies": {
+    "@babel/core": "^7.22.11",
+    "@babel/preset-env": "^7.22.10",
     "@cypress/request": "^3.0.0",
     "@cypress/request-promise": "^5.0.0",
     "@hmcts/cookie-manager": "^1.0.0",
@@ -49,14 +51,20 @@
     "accessible-autocomplete": "^2.0.4",
     "applicationinsights": "^2.7.3",
     "applicationinsights-native-metrics": "^0.0.10",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.3.0",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
+    "clean-webpack-plugin": "^4.0.0",
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "cookies": "^0.8.0",
+    "copy-webpack-plugin": "^6.4.1",
+    "css-loader": "^5.2.7",
     "csurf": "^1.11.0",
     "express": "^4.18.2",
     "express-nunjucks": "^3.1.1",
+    "file-loader": "^6.2.0",
     "formidable": "^3.5.1",
     "govuk-frontend": "^4.7.0",
     "govuk_template_jinja": "^0.26.0",
@@ -70,61 +78,53 @@
     "libphonenumber-js": "^1.10.43",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "mini-css-extract-plugin": "^1.6.2",
     "moment": "^2.29.4",
     "nunjucks": "^3.2.4",
+    "nunjucks-loader": "^3.0.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.6",
     "redis": "^4.6.8",
+    "sass": "^1.66.1",
+    "sass-loader": "^10.4.1",
     "superagent": "^8.1.2",
     "superagent-csrf": "^1.0.0",
-    "uuid": "^9.0.0"
+    "terser-webpack-plugin": "^4.2.3",
+    "uuid": "^9.0.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-middleware": "^5.3.3",
+    "webpack-merge": "^5.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11",
-    "@babel/preset-env": "^7.22.10",
     "@hmcts/eslint-config": "^1.4.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.3.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-jq": "^0.0.9",
-    "clean-webpack-plugin": "^4.0.0",
     "codeceptjs": "^3.5.3",
-    "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.7",
     "eslint": "^8.48.0",
     "eslint-plugin-mocha": "^5.0.0",
-    "file-loader": "^6.2.0",
     "fs": "^0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "jsdom": "^16.5.0",
-    "mini-css-extract-plugin": "^1.6.2",
     "mocha": "^6.1.4",
     "mocha-multi": "^1.1.0",
     "mocha-param": "^2.0.0",
     "mochapack": "^2.1.2",
     "mochawesome": "^4.0.1",
     "nock": "^13.3.3",
-    "nunjucks-loader": "^3.0.0",
     "nyc": "^15.1.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "pa11y": "^6.2.3",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "puppeteer": "^21.1.1",
     "rewire": "^7.0.0",
-    "sass": "^1.66.1",
-    "sass-loader": "^10.4.1",
     "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0",
     "supertest": "^6.3.3",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-middleware": "^5.3.3",
-    "webpack-merge": "^5.9.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "3.0.0"
   },
   "resolutions": {
     "@hmcts/nodejs-logging": "^4.0.4",
