--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "@hmcts/nodejs-logging": "^4.0.4",
     "json-schema": "^0.4.0",
     "qs": "^6.11.2",
+    "redis": "^3.1.1",
     "semver": "^7.5.4",
     "tough-cookie": "^4.1.3"
   },
