--- a/package.json
+++ b/package.json
@@ -134,7 +134,8 @@
     "qs": "^6.11.2",
     "redis": "^3.1.1",
     "semver": "^7.5.4",
-    "tough-cookie": "^4.1.3"
+    "tough-cookie": "^4.1.3",
+    "browserify-sign": "^4.2.2"
   },
   "packageManager": "yarn@3.5.1"
 }
