--- a/charts/sscs-tribunals-frontend/values.yaml
+++ b/charts/sscs-tribunals-frontend/values.yaml
@@ -16,12 +16,12 @@ nodejs:
     MEDIA_FILES_ALLOWED_ENABLED: true
     POSTCODE_CHECKER_ALLOWED_RPCS: "birmingham,liverpool,sutton,leeds,newcastle,cardiff,glasgow,bradford"
     UV_THREADPOOL_SIZE: 64
-    CONTACT_US_WEBCHAT_ENABLED: false
+    CONTACT_US_WEBCHAT_ENABLED: true
     FT_WELSH: true
     ALLOW_DLA_ENABLED: true
     #Added for new Webchat with Agent
-    WEBCHAT_URL: "webchat.ctsc.hmcts.net"
-    WEBCHAT_CLIENT_URL: "webchat-client.ctsc.hmcts.net"
+    WEBCHAT_URL: "webchat.pp.ctsc.hmcts.net"
+    WEBCHAT_CLIENT_URL: "webchat-client.pp.ctsc.hmcts.net"
 
   keyVaults:
     sscs:
