--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -12,6 +12,7 @@ nodejs:
     WEBCHAT_URL: "webchat.pp.ctsc.hmcts.net"
     WEBCHAT_CLIENT_URL: "webchat-client.pp.ctsc.hmcts.net"
     ALLOW_COOKIE_BANNER_ENABLED: true
+    WEBCHAT_OPENING_TIME_8_5: true
     FT_WELSH: true
     PCQ_ENABLED: true
   keyVaults:
