--- a/package.json
+++ b/package.json
@@ -135,7 +135,8 @@
     "redis": "^3.1.1",
     "semver": "^7.5.4",
     "tough-cookie": "^4.1.3",
-    "browserify-sign": "^4.2.1"
+    "browserify-sign": "^4.2.1",
+    "express": "^4.19.2"
   },
   "packageManager": "yarn@3.5.1"
 }
