--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.6",
+    "playwright": "^1.30.0",
     "redis": "^4.6.8",
     "sass": "^1.66.1",
     "sass-loader": "^10.4.1",
