--- a/package.json
+++ b/package.json
@@ -137,7 +137,8 @@
     "semver": "^7.5.4",
     "tough-cookie": "^4.1.3",
     "browserify-sign": "^4.2.1",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "formidable": "^3.5.1"
   },
   "packageManager": "yarn@3.5.1"
 }
