--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "setup": "exit 0",
     "mock": "yarn mock-uploader & yarn debug",
     "test:unit": "cross-env NODE_PATH=. NODE_ENV=test mocha --exit 'test/unit/**/*.test.js'",
-    "test:assets": "cross-env NODE_PATH=. NODE_ENV=test NODE_OPTIONS=--openssl-legacy-provider mochapack 'test/assets/**/*.test.js' --webpack-config test/webpack.config.js --require babel-core/register",
+    "test:assets": "cross-env NODE_PATH=. NODE_ENV=test NODE_OPTIONS=--openssl-legacy-provider mochapack 'test/assets/**/*.test.js' --webpack-config test/webpack.config.js --require @babel/register",
     "test": "yarn test:unit && yarn test:assets",
     "test:all": "cross-env NODE_PATH=. NODE_ENV=test yarn test && yarn test:assets && yarn test:smoke",
     "lint": "cross-env NODE_PATH=. eslint --fix .",
@@ -37,8 +37,8 @@
     "lint"
   ],
   "dependencies": {
-    "@babel/core": "^7.22.11",
-    "@babel/preset-env": "^7.22.10",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
     "@cypress/request": "^3.0.0",
     "@cypress/request-promise": "^5.0.0",
     "@hmcts/cookie-manager": "^1.0.0",
@@ -49,7 +49,6 @@
     "@hmcts/uk-bank-holidays": "^1.0.2",
     "accessible-autocomplete": "^2.0.4",
     "applicationinsights": "^2.7.3",
-    "babel-core": "^6.26.3",
     "babel-loader": "^8.3.0",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
@@ -96,6 +95,7 @@
     "webpack-merge": "^5.9.0"
   },
   "devDependencies": {
+    "@babel/register": "^7.23.7",
     "@hmcts/eslint-config": "^1.4.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
@@ -127,7 +127,6 @@
     "webpack-node-externals": "3.0.0"
   },
   "resolutions": {
-    "@babel/traverse": "^7.23.2",
     "@hmcts/nodejs-logging": "^4.0.4",
     "debug": "^3.2.7",
     "json-schema": "^0.4.0",
