--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -27,4 +27,5 @@ sonar.exclusions=app.js,\
   steps/check-your-appeal/CheckYourAppeal.js,\
   views/components/web-chat.html,\
   Dockerfile,\
-  format-v4-audit.js
+  format-v4-audit.js,\
+  webpack.config.js
