--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "css-loader": "^7.1.2",
     "csurf": "^1.11.0",
     "express": "^4.19.2",
-    "express-nunjucks": "^3.1.1",
+    "express-nunjucks": "^3.1.2",
     "file-loader": "^6.2.0",
     "formidable": "^3.5.1",
     "govuk-frontend": "^4.7.0",
@@ -69,7 +69,6 @@
     "graceful-fs": "^4.2.11",
     "helmet": "^7.0.0",
     "html-entities": "^2.4.0",
-    "html-webpack-plugin": "^5.6.0",
     "http-status-codes": "^2.2.0",
     "jquery": "^3.7.1",
     "jquery-modal": "^0.9.2",
@@ -84,7 +83,7 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.6",
     "redis": "^4.6.8",
-    "sass": "^1.66.1",
+    "sass": "^1.77.8",
     "sass-loader": "^16.0.0",
     "style-loader": "^4.0.0",
     "superagent": "^8.1.2",
@@ -106,13 +105,13 @@
     "eslint": "^8.48.0",
     "eslint-plugin-mocha": "^5.0.0",
     "fs": "^0.0.1-security",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.3.0",
+    "gulp": "^5.0.0",
+    "gulp-cli": "^3.0.0",
     "jsdom": "^16.5.0",
     "mocha": "^6.1.4",
     "mocha-multi": "^1.1.0",
     "mocha-param": "^2.0.0",
-    "mochapack": "^2.1.2",
+    "mochapack": "^2.1.4",
     "mochawesome": "^4.0.1",
     "nock": "^13.3.3",
     "nyc": "^15.1.0",
@@ -129,17 +128,11 @@
     "webpack-node-externals": "3.0.0"
   },
   "resolutions": {
-    "@hmcts/nodejs-logging": "^4.0.4",
     "debug": "^3.2.7",
     "json-schema": "^0.4.0",
-    "postcss": "^8.4.31",
     "qs": "^6.11.2",
     "redis": "^3.1.1",
-    "semver": "^7.5.4",
-    "tough-cookie": "^4.1.3",
-    "browserify-sign": "^4.2.1",
-    "express": "^4.19.2",
-    "formidable": "^3.5.1"
+    "braces": "^3.0.3"
   },
   "packageManager": "yarn@3.5.1"
 }
