--- a/package.json
+++ b/package.json
@@ -115,11 +115,11 @@
     "mochawesome": "^4.0.1",
     "nock": "^13.3.3",
     "nyc": "^15.1.0",
-    "pa11y": "^6.2.3",
-    "playwright": "^1.41.1",
+    "pa11y": "^8.0.0",
+    "playwright": "^1.46.1",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
-    "puppeteer": "^22.4.1",
+    "puppeteer": "^23.2.0",
     "rewire": "^7.0.0",
     "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0",
@@ -132,7 +132,8 @@
     "json-schema": "^0.4.0",
     "qs": "^6.11.2",
     "redis": "^3.1.1",
-    "braces": "^3.0.3"
+    "braces": "^3.0.3",
+    "puppeteer": "^23.2.0"
   },
   "packageManager": "yarn@3.5.1"
 }
